[package]
name = "libcereal_module"
version = "0.9.0"
authors = ["Joey Ezechiëls <joey.ezechiels@gmail.com>"]
description = "Emacs module that provides Elisp bindings for libcereal."

[dependencies]
libc = "0.2"
emacs_module_bindings = { git = "https://github.com/jjpe/emacs_module_bindings.git", tag = "v0.5.0" }
cereal = { path = "../../libcereal" }

[lib]
name = "libcereal_module"
crate-type = ["cdylib"]
