[package]
name = "amplify_module"
version = "0.16.3"
authors = ["Joey Ezechiëls <joey.ezechiels@gmail.com>"]
description = "Emacs module that provides Elisp bindings for Amplify."

[dependencies]
amplify = { git = "https://github.com/jjpe/amplify", tag = "0.16.0" }
libc = "0.2"
emacs_module_bindings = "0.6"

[lib]
name = "amplify_module"
crate-type = ["cdylib"]
